# serial_servo

./: README.md
futaba/: CMakeLists.txt  Futaba.h  Servo.cpp  Servo.h  main.cpp
futaba/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  futaba
kondo_b3m/: B3M.h  CMakeLists.txt  Servo.cpp  Servo.h  main.cpp
test/: test.cpp
